--- a/css/homeStyles.css
+++ b/css/homeStyles.css
@@ -34,6 +34,12 @@ header h1 {
   border-radius: 100%;
   background: gray;
   margin: 10px 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 30px;
+  font-family: 'ZCOOL QingKe HuangYou', sans-serif;
+  color: #fff;
 }
 
 .difficulty {
